Rename '月末庫存' to '庫存' in index.html

--- a/index.html
+++ b/index.html
@@ -622,9 +622,9 @@
                         <div class="mc-row"><span class="mc-label">開銷</span><span class="mc-val">$${md.cost}</span></div>
                         <div class="mc-row"><span class="mc-label">均/hr</span><span class="mc-val">$${m_avg}</span></div>
                         <div class="mc-stock-box">
-                            <div class="mc-stock-label">月末庫存</div>
+                            <div class="mc-stock-label">庫存</div>
                             <div class="mc-stock-num ${stockClass}">
-                                ${md.endStock} <span style="font-size:0.9rem; opacity:0.7;">顆</span>
+                                ${md.endStock} <span style="font-size:0.9rem; opacity:1.2;">顆</span>
                             </div>
                         </div>
                     </div>
